--- a/index.html
+++ b/index.html
@@ -370,6 +370,7 @@ data science when I’m stuck</p>
 <img src="images/giraffe.jpeg" style="width:75%"></p>
 <p>if you’d like to learn more about this website, visit <a
 href="about.html">this page</a></p>
+<p>Now I can put stufff on the internet.</p>
 </div>
 
 
